-- Up to you — weather cluster: CWA forecast and observation
-- Generated by docs/diagrams/er_schema.py from pg_dump. Do not edit.
CREATE TABLE forecast_publication (
    id bigint NOT NULL,
    dataset_id text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE forecast_reading (
    publication_id bigint NOT NULL,
    element text NOT NULL,
    slot_start timestamp with time zone NOT NULL,
    measure text NOT NULL,
    value text NOT NULL,
    township_code text NOT NULL,
    PRIMARY KEY (publication_id, township_code, element, measure, slot_start),
    FOREIGN KEY (publication_id) REFERENCES forecast_publication(id)
);
CREATE TABLE observation_publication (
    id bigint NOT NULL,
    dataset_id text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE observation_reading (
    publication_id bigint NOT NULL,
    station_id text NOT NULL,
    station_name text NOT NULL,
    observed_at timestamp with time zone NOT NULL,
    element text NOT NULL,
    value text,
    town_code text,
    PRIMARY KEY (publication_id, station_id, element, observed_at),
    FOREIGN KEY (publication_id) REFERENCES observation_publication(id)
);
CREATE TABLE township_station (
    township_code text NOT NULL,
    township_name text NOT NULL,
    station_id text NOT NULL,
    resolution text NOT NULL,
    distance_km numeric(6,2),
    PRIMARY KEY (township_code)
);
